<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_md"
    tools:context=".fragments.TosFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_title"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_detail1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_detail2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_detail3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_detail4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_md"
                android:text="@string/tos_footer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_md"
                    android:layout_marginRight="@dimen/margin_md"
                    android:text="@string/back"
                    app:bootstrapBrand="regular"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="false" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>