<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/input_margin"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_label" />

                <Spinner
                    android:id="@+id/spinner_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name_label" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/text_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name_hint"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="md"
                    app:showOutline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_label" />

                <Spinner
                    android:id="@+id/spinner_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_activity_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_name_label" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/text_activity_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_name_hint"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="md"
                    app:showOutline="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_start_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_label" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/text_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_hint"
                    android:inputType="date"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="md"
                    app:showOutline="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_label" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/text_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_hint"
                    android:inputType="date"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="md"
                    app:showOutline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/input_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_event_label" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_event_hint"
                    android:inputType="textLongMessage"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="md"
                    app:showOutline="true" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_margin"
            android:layout_marginEnd="@dimen/input_margin"
            android:text="@string/back"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/input_margin"
            android:text="@string/next"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false"
            android:layout_marginRight="@dimen/input_margin" />
    </LinearLayout>

</LinearLayout>